// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TimelinePosts - Snapshots > should match snapshot for empty state 1`] = `
<div>
  <div
    data-testid="timeline-empty"
  >
    No posts
  </div>
</div>
`;

exports[`TimelinePosts - Snapshots > should match snapshot for error state 1`] = `
<div>
  <div
    data-testid="timeline-initial-error"
  >
    Error: 
    Network error
  </div>
</div>
`;

exports[`TimelinePosts - Snapshots > should match snapshot for loading state 1`] = `
<div>
  <div
    data-testid="timeline-loading"
  >
    Loading...
  </div>
</div>
`;

exports[`TimelinePosts - Snapshots > should match snapshot with posts 1`] = `
<div>
  <div
    data-cy="timeline-container"
    data-testid="container"
  >
    <div
      class="space-y-4"
      data-cy="timeline-posts"
      data-testid="container"
      role="feed"
    >
      <div
        data-testid="post-author1:post1"
        role="article"
        tabindex="0"
      />
      <div
        data-testid="post-author2:post2"
        role="article"
        tabindex="0"
      />
      <div
        data-testid="post-author3:post3"
        role="article"
        tabindex="0"
      />
      <div
        class="h-5"
        data-testid="container"
      />
    </div>
  </div>
</div>
`;
